--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -42,5 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCxoQvoMzNw9KsijwAZZNbG5zjR425Gt8"
+    ></script>
   </body>
 </html>
