--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MERN TypeScript App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,9 +42,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script
-      async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCxoQvoMzNw9KsijwAZZNbG5zjR425Gt8"
-    ></script>
   </body>
 </html>
